# OTTO

./: .clang-format  .gitignore  .juce8-project  BUILDRULES.md  BUILD_CONSOLIDATION_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_QUICK_START.md  BUILD_SYSTEM.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.backup  COMMIT_MESSAGE.md  Current_System_Analysis.md  DESIGNRULES.md  DEVELOPMENT_NOTES.md  EFFICIENCY_REPORT.md  ENHANCEMENT_ROADMAP.md  GUI_REORGANIZATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INIRULES.md  INI_ROW_SYSTEM_CONVERSION_PLAN.md  JUCE8_CODING_STANDARDS.h  JUCE8_COMPATIBILITY_SUMMARY.md  JUCE8_MIGRATION_LOG.md  MINIMUM_SYSTEM_REQUIREMENTS.md  Makefile.linux  Makefile.tests  Makefile.tests.fixed  OTTO Tester.jucer  OTTO.jucer  OTTO_Layout_Analysis.md  OTTO_ROW_BASED_ARCHITECTURE_PHASES.md  OTTO_UI_LAYOUT_TRANSFORMATION_PLAN.md  PHASE_5_IMPLEMENTATION.md  PHASE_9_CONTINUATION_PROMPT.md  PHOSPHOR_ICON_FIX_SUMMARY.md  PHOSPHOR_ICON_SCALING_FIX.md  PLAYER_BUTTON_LAYOUT_GUIDE.md  PRESET_FONT_FIXES.md  (+28 more)
.zencoder/rules/: repo.md
Assets/Docs/: LICENSE.txt
Assets/Drumkits/Percussion/: Percussion Claps.sfz
Assets/MidiFiles/Fills/: go.sh
Assets/MidiFiles/Grooves/: 80's Metal.MID  80's Rock.MID  90's Alternative.MID  90's Alternative2.MID  90's Indie Rock.MID  Add an Organ.MID
Builds/Android/: local.properties  settings.gradle
Builds/Android/app/: CMakeLists.txt  build.gradle
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/CMake/: CMakeCache.txt  cmake_install.cmake
Builds/MacOSX/CMake-Release/: CMakeCache.txt  cmake_install.cmake
Builds/MacOSX/OTTO.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: OTTO.sln  OTTO_SharedCode.vcxproj  OTTO_SharedCode.vcxproj.filters  OTTO_StandalonePlugin.vcxproj  OTTO_VST3.vcxproj  OTTO_VST3ManifestHelper.vcxproj  resources.rc
Builds/iOS/: Info-Standalone_Plugin.plist
Builds/iOS/CMake-Simulator/: CMakeCache.txt  cmake_install.cmake
Builds/iOS/OTTO.xcodeproj/: project.pbxproj
JuceLibraryCode/: BinaryData.h  BinaryData5.cpp  JuceHeader.h  JucePluginDefines.h
Resources/: CMakeLists.txt
Source/: AIAssistantPanel.cpp  AIAssistantPanel.h  AdvancedAILearning.cpp  AdvancedAILearning.h  AutoMixAssistant.cpp  AutoMixAssistant.h  CloudServiceManager.h  CollaborationPanel.h  ColorScheme.cpp  ColorScheme.h  CommunityBrowser.cpp  CommunityBrowser.h  ComponentState.h  CustomGroupManagerPopup.cpp  CustomGroupManagerPopup.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  DrumKitEditorContent.cpp  DrumKitEditorContent.h  DrumKitSectionComponent.cpp  DrumKitSectionComponent.h  DrumkitEditorWindow.cpp  DrumkitEditorWindow.h  EnhancedPluginEditor.cpp  EnhancedPluginEditor.h  EnhancedProportionalEditor.cpp  EnhancedProportionalEditor.h  ErrorHandling.h  FontManager.cpp  FontManager.h  INIAudio.h  INIConfig.h  INIDataManager.cpp  INIDataManager.h  INIFonts.h  INIGMDrums.h  INIMIDI.h  INIUI.h  INIUtils.h  INIValidation.h  (+116 more)
Source/Animation/: AnimationManager.cpp  AnimationManager.h  EasingCurves.cpp  EasingCurves.h  TransitionEffects.cpp  TransitionEffects.h
Source/DragDrop/: DragDropManager.cpp  DragDropManager.h
Source/Performance/: AudioProfiler.cpp  AudioProfiler.h  MemoryManager.cpp  MemoryManager.h  RenderOptimizer.cpp  RenderOptimizer.h
Source/UI/Controls/: TouchOptimizedControls.cpp  (+1 more)
Source/UX/: AccessibilityEnhancer.cpp  AccessibilityEnhancer.h  ContextMenuManager.cpp  ContextMenuManager.h  KeyboardHandler.cpp  KeyboardHandler.h
Source/tests/: AIComponentTests.h  AudioProcessingTests.h  CrossPlatformTests.h  MemoryLeakTests.h  MidiTimingTests.h  RowComponentTest.cpp  StandaloneTestRunner.cpp  StatePersistenceTests.h  TestRunner.cpp  TestRunnerPlugin.h  test_compile.cpp
build_test/: compile_commands.json  juce_vst3_helper
cmake/: AdvancedRobustness.cmake  Android-Enhanced.cmake  JuceConfig.cmake  ReaperTestingIntegration.cmake  Windows.cmake  WindowsParallelsOptimization.cmake  iOS-Device.cmake  iOS-Enhanced.cmake  iOS-Simulator.cmake
cmake/templates/: monitor_vm_performance.bat.in  parallels_build_setup.bat.in  reaper_plugin_install.bat.in  sync_plugins_to_mac.bat.in
docker/: Dockerfile.linux  docker-compose.yml
docs/: ASSET_MANAGEMENT.md  BUILDRULES.md  CHANGELOG.md  CHANGELOG_PRESET_FONT_REDUCTION.md  DESIGNRULES.md  DEVELOPMENT_SESSION_COMPLETE.md  DROPDOWNMENUALTERNATIVE_IDEA.cpp  DRUMKIT_REFACTOR_PROGRESS.md  E2E_TEST_SUITE_COMPLETE.md  FINAL_VALIDATION_REPORT.md  GUI_FIXES.md  GUI_REORGANIZATION_TRACKER.md  GUI_TWEAKS.md  IMAGE_COMPLIANCE_UPDATE.md  INIRULES.md  INI_LAYOUT_SYSTEM_COMPLETION.md  JUCE_SETUP_INSTRUCTIONS.md  JUCE_SETUP_REQUIREMENTS.md  MENU_CATEGORY_SELECTION_INDICATOR.md  MENU_SELECTION_FIX.md  MINIMUM_DIMENSIONS_ANALYSIS.md  MINIMUM_SYSTEM_REQUIREMENTS.md  OPEN_SOURCE_READY_SUMMARY.md  PERFORMANCE_BENCHMARKS.md  PHASE5_ROW4_VISUAL_POLISH_COMPLETE.md  PHASE6_ROW5_INTEGRATION_COMPLETE.md  PHASE_10_DOCUMENTATION_VALIDATION_COMPLETE.md  PHASE_2_3_X_COMPLETION_REPORT.md  PHASE_2_HANDOFF.md  PHASE_4_COMPLETION_REPORT.md  PHASE_9D-5_IMPLEMENTATION_COMPLETE.md  PHASE_9D-6_NEXT_IMPLEMENTATION_PROMPT.md  PHASE_9D-7_INTEGRATION_CONTINUATION_PROMPT.md  PHASE_9D_IMPLEMENTATION_PLAN.md  PHOSPHOR_SCALING_FIX_COMPLETED.md  PLAYER_NUMBER_IMPLEMENTATION.md  PRESET_DISPLAY_IMPROVEMENTS.md  PRESET_LABEL_FONT_REDUCTION.md  PRESET_MENU_FONT_REDUCTION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  (+10 more)
e2e-test/: CMakeLists.txt  ComponentIntegrationTests.h  E2ETestMain.cpp  E2ETestRunner.h  README.md  StateManagementE2ETests.h  UIWorkflowTests.h  UserInteractionTests.h
roadmaps/: PHASE_3_COMPLETION_REPORT.md
scripts/: validate_phase_2_3_x.sh
scripts/development/: go.sh  goc.sh  gonocomments sub.sh  gonocomments.sh  remove_commit_history.sh
scripts/setup/: get_team_id.sh  setup_juce8.sh
scripts/testing/: complete_windows_workflow.bat  optimize_parallels_windows.bat  run_e2e_tests.sh  test_reaper_integration.bat
scripts/tools/: fix_clion_permanent.sh  monitor_clion_config.sh  otto_lint.sh
vscode-build-debug/: juce_vst3_helper
(+80 files in other folders)
